Toolbar con iconos

--- a/Qt-notepad/resources.qrc
+++ b/Qt-notepad/resources.qrc
@@ -1,5 +1,9 @@
 <RCC>
     <qresource prefix="/new/prefix1">
         <file alias="new">new.png</file>
+        <file alias="save">save.png</file>
+        <file alias="undo">undo.png</file>
+        <file alias="redo">redo.png</file>
+        <file alias="open">open.png</file>
     </qresource>
 </RCC>
